--- a/app/scss/pages/landing-2/_index.scss
+++ b/app/scss/pages/landing-2/_index.scss
@@ -4,7 +4,7 @@
 @forward "about";
 @forward "counter";
 @forward "skill";
-// @forward "service";
+@forward "service";
 // @forward "qualification";
 // @forward "cta";
 // @forward "portfolio";
