--- a/app/partials/pages/landing-1/_service.njk
+++ b/app/partials/pages/landing-1/_service.njk
@@ -5,25 +5,28 @@
         {
         id:1,
         img:"./image/l-1/s-1.svg",
+        btnText:"Explore Service",
         title:"Web Design",
         text:"Lorem Ipsum is simply dumy text of the printing and type setting industry."
         },
         {
         id:2,
         img:"./image/l-1/s-2.svg",
+        btnText:"Explore Service",
         title:"Web Development",
         text:"Lorem Ipsum is simply dumy text of the printing and type setting industry."
         },
         {
         id:3,
         img:"./image/l-1/s-3.svg",
+        btnText:"Explore Service",
         title:"UI/UX Design",
         text:"Lorem Ipsum is simply dumy text of the printing and type setting industry."
         }
 
 
 ]%}
-<div class="service-section">
+<div class="service-section-01">
     <div class="container">
         <div class="section-title-block text-center">
             <h6 class="subtitle text-primary mb-10">My Expertise</h6>
@@ -35,6 +38,7 @@
                 {{Card.SerciceCard({
                     img:item.img,
                     title:item.title,
+                    btnText:item.btnText,
                     text:item.text
                 })}}
             </div>
