cta section complete

--- a/app/scss/pages/landing-2/_index.scss
+++ b/app/scss/pages/landing-2/_index.scss
@@ -5,8 +5,8 @@
 @forward "counter";
 @forward "skill";
 @forward "service";
+@forward "cta";
 // @forward "qualification";
-// @forward "cta";
 // @forward "portfolio";
 // @forward "testimonial";
 // @forward "blog";
