--- a/app/scss/pages/landing-2/_index.scss
+++ b/app/scss/pages/landing-2/_index.scss
@@ -6,8 +6,8 @@
 @forward "skill";
 @forward "service";
 @forward "cta";
+@forward "portfolio";
 // @forward "qualification";
-// @forward "portfolio";
 // @forward "testimonial";
 // @forward "blog";
 // @forward "footer";
