--- a/app/scss/pages/landing-1/_portfolio.scss
+++ b/app/scss/pages/landing-1/_portfolio.scss
@@ -20,13 +20,38 @@
     }
 }
 .portfolio-filter-menu{
+    @media (max-width:480px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
     .btn{
         font-weight: 500 !important;
         padding: 0;
-        margin: 0 25px;
+        margin: 0 15px;
         padding-bottom: 5px;
         line-height: 1.2;
         position: relative;
+        @media (max-width:480px) {
+            margin: 0;
+            padding: 0;
+            margin-bottom: 10px;
+            &:last-child{
+                margin-bottom: 0;
+            }
+            &::before{
+                display: none;
+            }
+        }
+        @media (min-width:768px) {
+            margin: 0 25px;
+        }
+        &:last-child{
+            margin-right: 0;
+        }
+        &:first-child{
+            margin-left: 0;
+        }
         &::before{
             position: absolute;
             content: "";
@@ -43,59 +68,6 @@
             &::before{
                 width: 100%;
             }
-        }
-    }
-}
-.portfolio-card{
-    overflow: hidden;
-    display: block;
-    position: relative;
-    img{
-        border-radius: 5px;
-    }
-    .portfolio-body{
-        overflow: hidden;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        transition: .3s;
-        transform: translateY(100%);
-        background: var(--bs-primary);
-        border-radius: 0 0 5px 5px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 25px 15px;
-        @media (min-width:575px) {
-            padding: 25px 35px;
-        }
-        .content{
-            span{
-                font-weight: 500;
-                font-size: 16px;
-                line-height: 1.222222222222222;
-                color: var(--bs-white); 
-                @media (min-width:575px) {
-                    font-size: 18px;
-                }
-            }
-            h6{
-                font-weight: 600;
-                line-height: 1.208333333333333;
-                font-size: 18px;
-                color: var(--bs-white); 
-                margin-top: 5px;
-                @media (min-width:575px) {
-                    font-size: 24px;
-                }
-            }
-        }
-    }
-    &.active,
-    &:hover{
-        .portfolio-body{
-            transform: translateY(0);
         }
     }
 }
