--- a/app/scss/pages/landing-2/_index.scss
+++ b/app/scss/pages/landing-2/_index.scss
@@ -7,6 +7,7 @@
 @forward "service";
 @forward "cta";
 @forward "portfolio";
+@forward "feature";
 // @forward "qualification";
 // @forward "testimonial";
 // @forward "blog";
