feature section complete

--- a/app/scss/pages/landing-2/_feature.scss
+++ b/app/scss/pages/landing-2/_feature.scss
@@ -12,4 +12,11 @@
             margin-bottom: 70px;
         }
     }
+    &__button{
+        text-align: center;
+        margin-top: 30px;
+        @media (min-width:992px) {
+            margin-top: 55px;
+        }
+    }
 }
