--- a/app/partials/pages/landing-2/_feature.njk
+++ b/app/partials/pages/landing-2/_feature.njk
@@ -60,6 +60,14 @@
                 </div>
             {% endfor %}
         </div>
+        <div class="feature-section-01__button">
+            <a class="btn btn-primary" href="#">
+                Get In Touch
+                <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 13L7 7L1 1" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </a>
+        </div>
     </div>              
 </div>
 {% endmacro %}
