--- a/app/scss/pages/landing-2/_index.scss
+++ b/app/scss/pages/landing-2/_index.scss
@@ -8,7 +8,7 @@
 @forward "cta";
 @forward "portfolio";
 @forward "feature";
+@forward "testimonial";
 // @forward "qualification";
-// @forward "testimonial";
 // @forward "blog";
 // @forward "footer";
