faq section complete

--- a/app/scss/pages/landing-2/_index.scss
+++ b/app/scss/pages/landing-2/_index.scss
@@ -9,6 +9,6 @@
 @forward "portfolio";
 @forward "feature";
 @forward "testimonial";
-// @forward "qualification";
+@forward "faq";
 // @forward "blog";
 // @forward "footer";
