--- a/app/scss/abstracts/_colors.scss
+++ b/app/scss/abstracts/_colors.scss
@@ -7,9 +7,9 @@ $gray : #8492A7;
 $solitude:#EBF6FF;
 $mystic:#EBF6FF;
 $foam:  #F0F9FE;
+$cadet-blue:#ADB7C2;
 $header-link-color: $black;
 $btn-link-color: $black;
-
 $headingDark: $black;
 $headingLight: $white;
 $textDark: $gray;
@@ -24,4 +24,5 @@ $custom-colors: (
   "solitude": $solitude,
   "mystic": $mystic,
   "foam": $foam,
+  "cadet-blue": $cadet-blue,
 );
