hero section and band section complete

--- a/app/partials/pages/landing-2/_hero.njk
+++ b/app/partials/pages/landing-2/_hero.njk
@@ -7,7 +7,7 @@
                     <h6 class="subtitle text-primary mb-10"><span class="line"></span>One Of The Best Solutions</h6>
                     <h1 class="title">Creating Services For Your <span class="text-primary d-inline">Startup </span>Business</h1>
                     <p class="text-dark">We’re a Digital Marketing Agency in Bangladesh, made up of a <br class="d-none d-xxl-block"> group of passionate individuals.</p>
-                    <div class="hero-section-02__content--newsletter">
+                    <div class="hero-section-02__content--newsletter hero-newsletter-01">
                         <form action="#">
                             <div class="form-group">
                                 <input type="text" class="form-control" placeholder="Enter your mail address">
