--- a/app/scss/pages/landing-2/_testimonial.scss
+++ b/app/scss/pages/landing-2/_testimonial.scss
@@ -24,7 +24,7 @@
     &__control-buttons{
         display: flex;
         align-items: center;
-        justify-content: end;
+        justify-content: flex-end;
         margin: 0 -10px;
         .button{
             margin: 0 10px;
