--- a/app/scss/helpers/_spacings.scss
+++ b/app/scss/helpers/_spacings.scss
@@ -28,6 +28,14 @@
   }
 }
 
+.featre-card-bottom {
+  margin-bottom: -50px;
+
+  [class^="col"] {
+    margin-bottom: 50px;
+  }
+}
+
 .gallery-row {
   margin-bottom: -24px;
 
