--- a/app/scss/components/_mixed.scss
+++ b/app/scss/components/_mixed.scss
@@ -1,3 +1,4 @@
+@use "../abstracts/mixins" as *;
 .hero-newsletter-01{
     position: relative;
     .form-group{
@@ -46,4 +47,31 @@
         transform: translateY(-50%);
     }
   } 
+}
+.content-list-01{
+    ul{
+        li{
+            display: flex;
+            margin-bottom: 15px;
+            @media (min-width:575px) {
+                margin-bottom: 20px;
+            }
+            &:last-child{
+                margin-bottom: 0;
+            }
+            span{
+                margin-right: 12px;
+                svg{
+                    display: block;
+                }
+            }
+            font-weight: 500;
+            color: var(--bs-black);
+            font-size: 16px;
+            line-height: 1.2;
+            @media (min-width:575px) {
+                font-size: 18px;
+            }
+        }
+    }
 }
