--- a/app/partials/pages/landing-3/_content-01.njk
+++ b/app/partials/pages/landing-3/_content-01.njk
@@ -41,7 +41,7 @@
                             </ul>
                         </div>
                         <a class="btn btn-1 btn-primary" href="#">
-                            Book a Call
+                            Learn More
                             <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M1 13L7 7L1 1" stroke="" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
