--- a/app/scss/helpers/_typography.scss
+++ b/app/scss/helpers/_typography.scss
@@ -97,3 +97,14 @@
   }
 }
 
+.font-size-30{
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.4;
+  @media (min-width:575px) {
+    font-size: 28px;
+  }
+  @media (min-width:992px) {
+    font-size: 30px;
+  }
+}
