--- a/app/scss/pages/landing-3/_footer.scss
+++ b/app/scss/pages/landing-3/_footer.scss
@@ -4,7 +4,7 @@
         padding: 80px 0;  
     }
     @media (min-width:992px) {
-        padding: 130px 0;  
+        padding: 260px 0 130px;  
     }
     &__wrapper{
         @media (min-width:480px) {
