--- a/app/partials/components/Footer/_footer-02.njk
+++ b/app/partials/components/Footer/_footer-02.njk
@@ -90,17 +90,17 @@
             </div>
         </div>
     </div>
-    <div class="copyright-block-01 copyright-block-01--modifi">
+    <div class="copyright-block copyright-block--modifi-01">
         <div class="container">
             <div class="row">
-                <div class="copyright-block-01__wrapper">
-                    <ul class="list-unstyled copyright-block-01__social">
+                <div class="copyright-block__wrapper">
+                    <ul class="list-unstyled copyright-block__social">
                         <li class="list-item"><a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a></li>
                         <li class="list-item"><a href="https://dribbble.com/"><i class="fab fa-dribbble"></i></a></li>
                         <li class="list-item"><a href="https://github.com/"><i class="fab fa-github"></i></a></li>
                         <li class="list-item"><a href="https://twitter.com/"><i class="fab fa-twitter"></i></a></li>
                     </ul>
-                    <div class="copyright-block-01__content">
+                    <div class="copyright-block__content">
                         <p class="text-dark">© 2021 Zakirsoft. Powered by Bestkit</p>
                     </div>
                 </div>
