--- a/app/scss/components/_index.scss
+++ b/app/scss/components/_index.scss
@@ -4,6 +4,7 @@
 @forward "header";
 @forward "button";
 @forward "cards";
+@forward "pricings";
 @forward "footer";
 @forward "breadcrumb";
 @forward "mixed";
