--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -151,6 +151,53 @@
       }
     }
   }
+  &--03{
+    overflow: hidden;
+    border: 0;
+    flex-direction: column;
+    box-shadow: 0px 15px 30px rgba(210, 217, 224, 0.35);
+    padding: 40px 25px;
+    @media (min-width:992px) {
+      padding: 50px;
+    }
+    .card-service-wrapper{
+      display: flex;
+      align-items: center;
+      margin-bottom: 20px;
+      @media (min-width:575px) {
+        margin-bottom: 30px;
+        
+      }
+      .card-image{
+        @include square(55px, 3px);
+        margin: 0;
+        margin-right: 20px;
+      }
+      .card-body{
+        .card-title{
+          margin: 0;
+        }
+      }
+    }
+    &::before{
+      content: "";
+      height: 3px;
+      width: 100%;
+      background: var(--bs-primary);
+      position: absolute;
+      bottom: 0;
+      visibility: hidden;
+      opacity: 0;
+      transition: .5s;
+      left: 0;
+    }
+    &:hover{
+      &::before{
+        visibility: visible;
+        opacity: 1;
+      }
+    }
+  }
 }
 .card-blog{
   background: var(--bs-white-lilac);
